支持RaspberryPi 32位armhf系统，aria2c为armhf修改版

--- a/package.json
+++ b/package.json
@@ -158,10 +158,38 @@
     "linux": {
       "category": "Network",
       "target": [
-        "AppImage",
-        "deb",
-        "rpm",
-        "snap"
+        {
+          "target": "AppImage",
+          "arch": [
+            "x64",
+            "ia32",
+            "armv7l"
+          ]
+        },
+        {
+          "target": "deb",
+          "arch": [
+            "x64",
+            "ia32",
+            "armv7l"
+          ]
+        },
+        {
+          "target": "rpm",
+          "arch": [
+            "x64",
+            "ia32",
+            "armv7l"
+          ]
+        },
+        {
+          "target": "snap",
+          "arch": [
+            "x64",
+            "ia32",
+            "armv7l"
+          ]
+        }
       ],
       "extraResources": {
         "from": "./extra/linux/",
